--- a/style.css
+++ b/style.css
@@ -1,11 +1,100 @@
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: pink;
+  margin-top: 200px;
+}
+
+section {
+  border: 1px solid violet;
+  display: flex;
+  flex-direction: column;
+  border-radius: 10px;
+  justify-content: center;
+  align-items: center;
+  height: 500px;
+  width: 500px;
+}
+
+h1 {
+  font-size: 80px;
+  text-align: center;
+  color: azure;
+  margin-bottom: 75px;
+  font-family: 'Cute Font', cursive;
+}
+
+#user-input {
+  height: 30px;
+  width: 250px;
+  border-radius: 10px;
+  border-style: none;
+}
+
+#btn {
+    height: 35px;
+  --s: 0.25em; /* control the wave*/
+
+  padding: 0.4em 0.5em;
+  background-color: 	#f65656;
+  color: #fff;
+  --_s: calc(var(--s) * 4) 51% repeat-x;
+  --_r: calc(1.345 * var(--s)) at left 50%;
+  --_g1: #000 99%, #0000 101%;
+  --_g2: #0000 99%, #000 101%;
+  --mask: radial-gradient(var(--_r) top calc(var(--s) * 1.9), var(--_g1))
+      calc(50% - 2 * var(--s) - var(--_i, 0px)) 0 / var(--_s),
+    radial-gradient(var(--_r) top calc(var(--s) * -0.9), var(--_g2))
+      calc(50% - var(--_i, 0px)) var(--s) / var(--_s),
+    radial-gradient(var(--_r) bottom calc(var(--s) * 1.9), var(--_g1))
+      calc(50% - 2 * var(--s) + var(--_i, 0px)) 100% / var(--_s),
+    radial-gradient(var(--_r) bottom calc(var(--s) * -0.9), var(--_g2))
+      calc(50% + var(--_i, 0px)) calc(100% - var(--s)) / var(--_s);
+  -webkit-mask: var(--mask);
+  mask: var(--mask);
+  clip-path: polygon(
+    calc(2 * var(--s) - var(--_i, 0px)) 0,
+    calc(100% - var(--_i, 0px)) 0,
+    calc(100% - var(--s)) 50%,
+    calc(100% - 2 * var(--s) + var(--_i, 0px)) 100%,
+    calc(0% + var(--_i, 0px)) 100%,
+    var(--s) 50%
+  );
+  cursor: pointer;
+  transition: 0.35s;
+}
+button.alt {
+  clip-path: polygon(
+    calc(0% - var(--_i, 0px)) 0,
+    calc(100% - 2 * var(--s) - var(--_i, 0px)) 0,
+    calc(100% - var(--s)) 50%,
+    calc(100% + var(--_i, 0px)) 100%,
+    calc(2 * var(--s) + var(--_i, 0px)) 100%,
+    var(--s) 50%
+  );
+}
+button:hover {
+  --_i: calc(2 * var(--s));
+}
+button.alt:hover {
+  --_i: calc(-2 * var(--s));
+}
+button:active {
+  background-image: linear-gradient(#0004 0 0);
+}
+button:focus-visible {
+  -webkit-mask: none;
+  clip-path: none;
+  outline-offset: 0.1em;
+  padding-block: 0.2em;
+  margin-block: 0.2em;
+  transition: 0s;
 }
